--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -19,7 +19,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: ruby/setup-ruby@v1
-      with: { ruby-version: ${{ matrix.ruby }} }
+      with:
+        ruby-version: ${{ matrix.ruby }}
 
     - uses: actions/cache@v2
       id: cache
